--- a/index.html
+++ b/index.html
@@ -46,7 +46,17 @@
         </div>
         <!-- <div id="calendar-view">
         <h2>Calendar</h2> -->
-        <div id="calendar"></div>
+        <div id="calendar">
+          <div class="task">
+            <div class="task-name">
+              Task Name - Very long task name that might overflow
+            </div>
+            <div class="button-container">
+              <button class="edit-button">Edit</button>
+              <button class="delete-button">Delete</button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
